<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="menu_action_new">Novo</string>
	<string name="menu_action_detail">Detalhes</string>
	<string name="menu_action_edit">Editar</string>
	<string name="menu_action_delete">Excluir</string>
	<string name="menu_action_find">Buscar</string>
	<string name="menu_action_select">Selecionar</string>
	<string name="menu_action_save">Salvar</string>
	<string name="menu_action_add">Adicionar</string>
	<string name="dialog_action_yes">Sim</string>
	<string name="dialog_action_no">Não</string>
	<string name="dialog_action_cancel">Cancelar</string>
	<string name="dialog_action_ok">Ok</string>
	<string name="element_action_select">SELECIONE</string>
	<string name="element_action_detail">DETALHE</string>
	<string name="element_action_collection">COLEÇÃO</string>
	<string name="activity_title_cliente_list">Clientes</string>
	<string name="activity_title_cliente_insert">Cadastrar Cliente</string>
	<string name="activity_title_cliente_edit">Editar Cliente</string>
	<string name="activity_title_cliente_detail">Cliente</string>
	<string name="activity_title_cliente_find">Buscar Cliente</string>
	<string name="activity_title_cliente_select_list">Selecionar Cliente</string>
	<string name="activity_title_cliente_find_result_list">Resultado em Clientes</string>
	<string name="activity_title_produto_list">Produtos</string>
	<string name="activity_title_produto_insert">Cadastrar Produto</string>
	<string name="activity_title_produto_edit">Editar Produto</string>
	<string name="activity_title_produto_detail">Produto</string>
	<string name="activity_title_produto_find">Buscar Produto</string>
	<string name="activity_title_produto_select_list">Selecionar Produto</string>
	<string name="activity_title_produto_find_result_list">Resultado em Produtos</string>
	<string name="activity_title_pedido_list">Pedidos</string>
	<string name="activity_title_pedido_insert">Cadastrar Pedido</string>
	<string name="activity_title_pedido_edit">Editar Pedido</string>
	<string name="activity_title_pedido_detail">Pedido</string>
	<string name="activity_title_pedido_find">Buscar Pedido</string>
	<string name="activity_title_pedido_select_list">Selecionar Pedido</string>
	<string name="activity_title_pedido_find_result_list">Resultado em Pedidos</string>
	<string name="activity_title_catalogo_list">Catalogos</string>
	<string name="activity_title_catalogo_insert">Cadastrar Catalogo</string>
	<string name="activity_title_catalogo_edit">Editar Catalogo</string>
	<string name="activity_title_catalogo_detail">Catalogo</string>
	<string name="activity_title_catalogo_find">Buscar Catalogo</string>
	<string name="activity_title_catalogo_select_list">Selecionar Catalogo</string>
	<string name="activity_title_catalogo_find_result_list">Resultado em Catalogos</string>
	<string name="activity_title_item_list">Itens</string>
	<string name="activity_title_item_insert">Cadastrar Item</string>
	<string name="activity_title_item_edit">Editar Item</string>
	<string name="activity_title_item_detail">Item</string>
	<string name="activity_title_item_find">Buscar Item</string>
	<string name="activity_title_item_select_list">Selecionar Item</string>
	<string name="activity_title_item_find_result_list">Resultado em Itens</string>
	<string name="action_label_class_cliente_attribute_nome">NOME</string>
	<string name="action_label_class_cliente_attribute_datanascimento">DATA DE NASCIMENTO</string>
	<string name="action_label_class_cliente_attribute_sexo">SEXO</string>
	<string name="action_label_class_cliente_attribute_id">IDENTIFICADOR</string>
	<string name="action_label_class_cliente_attribute_pedidos">PEDIDOS</string>
	<string name="action_label_class_produto_attribute_descricao">DESCRIÇÃO</string>
	<string name="action_label_class_produto_attribute_id">IDENTIFICADOR</string>
	<string name="action_label_class_produto_attribute_catalogos">CATALOGOS</string>
	<string name="action_label_class_produto_attribute_valor">VALOR</string>
	<string name="action_label_class_pedido_attribute_situacao">SITUAÇÃO</string>
	<string name="action_label_class_pedido_attribute_cliente">CLIENTE</string>
	<string name="action_label_class_pedido_attribute_itens">ITENS</string>
	<string name="action_label_class_pedido_attribute_data">DATA</string>
	<string name="action_label_class_pedido_attribute_id">IDENTIFICADOR</string>
	<string name="action_label_class_catalogo_method_adicionarproduto">Adicionar Produto</string>
	<string name="action_label_class_catalogo_method_adicionarproduto_parameter_produto">Produto</string>
	<string name="action_label_class_catalogo_attribute_produtos">PRODUTOS</string>
	<string name="action_label_class_catalogo_attribute_id">IDENTIFICADOR</string>
	<string name="action_label_class_catalogo_attribute_nome">NOME</string>
	<string name="action_label_class_catalogo_attribute_descricao">DESCRIÇÃO</string>
	<string name="action_label_class_item_attribute_pedido">PEDIDO</string>
	<string name="action_label_class_item_attribute_id">IDENTIFICADOR</string>
	<string name="action_label_class_item_attribute_valor">VALOR</string>
	<string name="action_label_class_item_attribute_produto">PRODUTO</string>
	<string name="action_label_class_item_attribute_quantidade">QUANTIDADE</string>
	<string name="activity_title_cliente_jointable_pedido_list">Pedidos</string>
	<string name="dialog_activity_cliente_jointable_pedido_list_add_title">Adicionar Pedidos</string>
	<string name="dialog_activity_cliente_jointable_pedido_list_remove_title">Remover Pedidos</string>
	<string name="activity_title_produto_jointable_catalogo_list">Catalogos</string>
	<string name="dialog_activity_produto_jointable_catalogo_list_add_title">Adicionar Catalogos</string>
	<string name="dialog_activity_produto_jointable_catalogo_list_remove_title">Remover Catalogos</string>
	<string name="activity_title_pedido_jointable_item_list">Itens</string>
	<string name="dialog_activity_pedido_jointable_item_list_add_title">Adicionar Itens</string>
	<string name="dialog_activity_pedido_jointable_item_list_remove_title">Remover Itens</string>
	<string name="activity_title_catalogo_jointable_produto_list">Produtos</string>
	<string name="dialog_activity_catalogo_jointable_produto_list_add_title">Adicionar Produtos</string>
	<string name="dialog_activity_catalogo_jointable_produto_list_remove_title">Remover Produtos</string>
	<string name="app_name">Empty Project</string>
</resources>